*redmine_git_hosting-0.7.3 (11 Jun 2014)

  11 Jun 2014; Manuel Rüger <mrueg@gentoo.org>
  +redmine_git_hosting-0.7.3.ebuild:
  [www-apps/redmine_git_hosting] Version bump.

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
  [www-apps/redmine_git_hosting] Remove .gitignore.

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
  [www-apps/redmine_git_hosting] Fix pkg_config.

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
  [www-apps/redmine_git_hosting] Fix pkg_config.

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
  [www-apps/redmine_git_hosting] Fix pkg_config.

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
  [www-apps/redmine_git_hosting] Fix pkg_config.

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
  [www-apps/redmine_git_hosting] Add pkg_config.

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
  [www-apps/redmine_git_hosting] Fix fowners.

*redmine_git_hosting-0.7.2 (22 Apr 2014)

  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +metadata.xml,
  +redmine_git_hosting-0.7.2.ebuild:
  [www-apps/redmine_git_hosting] Initial ebuild.